[package]
name = "StartAndStopWindowsApplications"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"] }
owo-colors = "4.1.0"
log = "0.4.22"

[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1.12"